syntax = "proto3";

package inventory;

option go_package = "./proto/inventory;inventory";

service InventoryService {
  rpc SayHello (HelloRequest) returns (HelloResponse);
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}
